k8s/k8s fluxmailer/deploy-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: beta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 6000
