k8s/k8s fluxmailer/svc-api.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: beta
  labels:
     app: api
  #annotations:
   # cloud.google.com/backend-config: '{"default": "api-backendconfig"}'
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
