k8s/k8s fluxmailer/svc-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: beta
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 6000
    targetPort: 6000
  type: LoadBalancer
