k8s/k8s fluxmailer/svc-web.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: beta
  labels:
     app: web
  #annotations:
   # cloud.google.com/backend-config: '{"default": "web-backendconfig"}'
spec:
  type:  ClusterIP
  selector:
    app: web
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
